--- a/src/index.css
+++ b/src/index.css
@@ -4,62 +4,97 @@
   transition: background-color 1s;
 }
 
-.App{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.avatar{
-  width: 20%;
-  margin: 0 auto;
-}
-  .avatar img{
-    width: 100%;
-  }
-
-.items-list{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 75%;
-  margin: 5% auto;
-}
-
-.item{
-  border-width: 2px;
-  border-style: solid;
-  width: 50px;
-  height: 50px;
-  padding: 5px;
-  border-radius:5px;
-  margin: 2px;
-  z-index: 2;
-}
-
-  .item:hover{
-    cursor: pointer;
-    transform: scale(1.2, 1.2);
-    transition: transform 0.1s;
-  }
 
 .icon-bg{
   position: fixed;
   bottom: 1%;
   right: 1%;
   animation: fadeIn 0.3s ease-out;
-  font-size: 150%;
   z-index: 1;
+}
+
+@media only screen and (min-width: 701px){
+
+  .App{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .avatar{
+    width: 20%;
+    margin: 0 auto;
+  }
+    .avatar img{
+      width: 100%;
+    }
+
+  .items-list{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 75%;
+    margin: 5% auto;
+  }
+
+  .item{
+    border-width: 2px;
+    border-style: solid;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    border-radius:5px;
+    margin: 2px;
+    z-index: 2;
+  }
+
+    .item:hover{
+      cursor: pointer;
+      transform: scale(1.2, 1.2);
+      transition: transform 0.1s;
+    }
+
+    .icon-bg{
+      font-size: 150%;
+    }
+
 }
 
 @media only screen and (max-width: 700px){
 
+  .App{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .avatar{
+    margin: 0 auto;
+    margin-bottom: 70px;
+  }
+  .avatar-img{
+    width: 200px;
+  }
+
   .items-list{
-    width: 60%;
+    width: 67%;
+    margin: 0 auto;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-direction: row;
+  }
+
+  .item{
+    border-width: 2px;
+    border-style: solid;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    border-radius:5px;
+    margin: 2px;
+    z-index: 2;
   }
 
   .icon-bg{
